0028625: Visualization, OpenGl_FrameBuffer - initialize Render Buffer with stencil